@@ -26,11 +26,15 @@
 * eql? method defined on Country and Timezone that is equivalent to ==.
 * == method of Timezone no longer raises an exception when passed an object
   with no identifier method.
+* == method of Country no longer raises an exception when passed an object
+  with no code method.
 * hash method defined on Country that returns the hash of the code.
 * hash method defined on Timezone that returns the hash of the identifier.
 * Miscellaneous API documentation corrections and improvements.
 * Timezone definition and indexes are now excluded from rdoc (the contents were
   ignored with #:nodoc: anyway).
+* Removed no longer needed #:nodoc: directives from timezone data files (which
+  are now modules instead of classes and excluded from the rdoc build).
 * Installation of gem now causes rdoc API documentation to be generated. #4905.
 * When optimizing transitions to generate zone definitions, check the
   UTC and standard offsets rather than just the total offset to UTC. Fixes an
@@ -44,6 +48,8 @@
 * Added a strftime method to Timezone that converts a time in UTC to local
   time and then returns it formatted. %Z is replaced with the Timezone 
   abbreviation for the given time (for example, EST or EDT). #4143.
+* Fix escaping of quotes in TZDataParser. This affected country names and
+  descriptions of timezones within countries.
 
 
 == Version 0.2.1 (tzdata v2006d) - 17-Apr-2006
